# biosim_g20_ida_kjersti

./: README.md  README_Dostojevskij.md  README_Fjodor2.md  requirements.txt  setup.cfg  tox.ini
examples/: check_sim.py
src/biosim/: __init__.py  animal.py  animals.py  annual_cycle.py  island_map.py  landscape.py  simulation.py
src/biosim/doc/: conf.py  index.rst  landscape.rst
src/biosim/doc/_build/doctrees/: animals.doctree  environment.pickle  index.doctree  island_map.doctree  landscape.doctree  simulation.doctree
src/biosim/doc/_build/html/: .buildinfo  animals.html  genindex.html  index.html  island_map.html  landscape.html  objects.inv  py-modindex.html  search.html  searchindex.js  simulation.html
src/biosim/doc/_build/html/_modules/: index.html
src/biosim/doc/_build/html/_modules/biosim/: animals.html  island_map.html  landscape.html  simulation.html
src/biosim/doc/_build/html/_sources/: animals.rst.txt  index.rst.txt  island_map.rst.txt  simulation.rst.txt
tests/: test_animals.py  test_biosim_interface.py  test_island_map.py  test_landscape.py
