[metadata]
name = biosim
description = A population dynamics simulation written in Python
long_description = file: README.rst
author = Ida Lunde Naalsund & Kjersti Rustad Kvisberg
author_email = idaln@hotmail.com & kjkv@nmbu.no

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    matplotlib
    numpy
    pandas

[options.packages.find]
where=src